# crm-bank-system

./: Dockerfile  celerybeat-schedule  docker-compose.yaml  pyproject.toml
crm_bank_system/: celerybeat-schedule  manage.py
crm_bank_system/admins/: apps.py  forms.py  services.py  urls.py  views.py
crm_bank_system/crm_bank_system/: .env  asgi.py  celery_app.py  settings.py  urls.py  wsgi.py
crm_bank_system/customers/: apps.py  dto.py  forms.py  middleware.py  models.py  services.py  signals.py  urls.py  views.py
crm_bank_system/customers/migrations/: 0001_initial.py  0002_alter_clientcard_balance.py  0003_alter_clientcard_balance_and_more.py  0004_clientcard_balance_in_usd.py  0005_alter_clientcard_balance_in_usd.py  0006_alter_clientcard_transaction_fee_percentage.py
crm_bank_system/documents/: dto.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
crm_bank_system/friendship/: models.py  urls.py  views.py
crm_bank_system/loans/: dto.py  forms.py  models.py  services.py  urls.py  views.py
crm_bank_system/news/: forms.py  models.py  signals.py  urls.py  views.py
crm_bank_system/notifications/: models.py
crm_bank_system/payments/: models.py
crm_bank_system/templates/: base_admin.html  base_user.html
crm_bank_system/trades/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
crm_bank_system/transactions/: models.py
crm_bank_system/users/: authentication_backends.py  dto.py  forms.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
media/reports/: 5.docx  6.docx  7.docx  8.docx  9.docx
(+101 files in other folders)
